# RepoReporter

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: AddProjectDialog.h  AddProjectDialog.ui  CMakeLists.txt  ConfigManager.h  FileModel.cpp  FileModel.h  FileTableModel.cpp  FileTableModel.h  FileTableView.cpp  FileTableView.h  LogManager.cpp  LogModel.cpp  LogModel.h  LogTableDelegate.h  LogTableModel.cpp  LogTableModel.h  LogTableView.cpp  LogTableView.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ProjectTreeModel.cpp  ProjectTreeModel.h  ProjectTreeView.cpp  ProjectTreeView.h  SystemTrayManager.cpp  SystemTrayManager.h  VersionControlManager.cpp  VersionControlManager.h  main.cpp  messagetextedit.h  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h
src/data/: VCSDataStructures.h
src/resources/: main.qrc
src/utils/: AutoRunManager.h  CommandLineManager.cpp  CommandLineManager.h  ConfigManager.cpp  FileUtil.cpp  FileUtil.h  HotkeyManager.cpp  HotkeyManager.h  LogManager.cpp  LogManager.h  ProxyStyle.cpp  ProxyStyle.h  SystemTrayManager.cpp  SystemTrayManager.cpp.autosave  SystemTrayManager.h  VersionControlManager.cpp  VersionControlManager.h
src/vcdata/: VCSDataStructures.h
src/widget/: FileTableModel.cpp  FileTableModel.h  FileTableView.cpp  FileTableView.h  LogTableDelegate.cpp  LogTableModel.cpp  LogTableModel.h  LogTableView.cpp  LogTableView.h  MessageTextEdit.cpp  MessageTextEdit.h  ProjectTreeModel.cpp  ProjectTreeModel.h  ProjectTreeView.cpp  ProjectTreeView.h  SearchLineEdit.cpp  SearchLineEdit.h
src/window/: AddProjectDialog.h  (+10 more)
(+1 files in other folders)
